# open-fbt

./: .gitignore  .secrets.baseline  Cargo.toml  LICENSE  README.md  build.ps1  build.rs  clippy.sh  haswell.Dockerfile  slow build.ps1  westmere.Dockerfile  znver3.Dockerfile
.github/workflows/: detect-new-secrets.yml
assets/: languages.txt  lyrics.txt
src/: main.rs
src/commands/: _deprecated.rs  admin.rs  database.rs  fun.rs  info.rs  mod.rs  tickets.rs  tools.rs
src/lib/: args.rs  checks.rs  enums.rs  event_handlers.rs  lib.rs  memes.rs  structs.rs  types.rs  utils.rs  vars.rs
