[[bin]]
name = "rusted-fbt"
path = "src/main.rs"

[lib]
name = "rusted_fbt_lib"
path = "src/lib/lib.rs"

[package]
name = "rusted-fbt"
version = "2.7.2"
edition = "2021"
publish = false

[features]
default = [
    "database",
] # Comment out this line when adding new imports and functions to see what needs a #[cfg(feature = "database")]
database = []
beta = []

[dependencies]
poise = { version = "0.5.6", features = [
    "cache",
    "collector",
] }
tokio = { version = "1.32.0", features = ["full"] }
csv = "1.2.2"
serde = "1.0.188"
serde_json = "1.0.107"
uwuify = "0.2.2"
chrono = "0.4.31"
clap = { version = "4.0.32", features = ["derive"] }
maplit = "1.0.2"
colored = "2.0.4"
strip_markdown = "0.2.0"
reqwest = "0.11.20"
futures = "0.3.28"
redis = { version = "0.23.3", features = ["aio", "tokio-comp"] }
merge = { version = "0.1.0", features = ["std", "num", "derive"] }
derivative = "2.2.0"
rand = "0.8.5"
unix-time = "0.1.5"
regex = "1.9.5"
once_cell = "1.18.0"
chrono-tz = "0.8.3"
meilisearch-sdk = "0.17.0"
serde_with = "3.3.0"
tracing = { version = "0.1.37", features = ["async-await"] }
tracing-subscriber = { version = "0.3.17", features = [
    "parking_lot",
    "registry",
] }
linkify = "0.10.0"
anyhow = "1.0.75"
thiserror = "1.0.49"
pastemyst = "1.0.0"
# oxipng = "5.0.1"
# mozjpeg = "0.9.3"
# lz4_flex = "0.9.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"

[profile.release-full]
inherits = "release"
lto = true
