[[bin]]
name = "rusted-fbt"
path = "src/main.rs"

[lib]
name = "rusted_fbt_lib"
path = "src/lib/lib.rs"

[package]
name = "rusted-fbt"
version = "2.7.2"
edition = "2021"
publish = false

[features]
default = [
    "database",
] # Comment out this line when adding new imports and functions to see what needs a #[cfg(feature = "database")]
database = []
beta = []

[dependencies]
poise = { version = "0.6.1", features = [
    "cache",
    "collector",
] }
tokio = { version = "1.38.0", features = ["full"] }
csv = "1.3.0"
serde = "1.0.203"
serde_json = "1.0.120"
uwuify = "0.2.2"
chrono = "0.4.38"
clap = { version = "4.5.8", features = ["derive"] }
maplit = "1.0.2"
colored = "2.1.0"
strip_markdown = "0.2.0"
reqwest = "0.12.5"
futures = "0.3.30"
redis = { version = "0.25.4", features = ["aio", "tokio-comp"] }
merge = { version = "0.1.0", features = ["std", "num", "derive"] }
derivative = "2.2.0"
rand = "0.8.5"
unix-time = "0.1.5"
regex = "1.10.5"
once_cell = "1.19.0"
chrono-tz = "0.9.0"
meilisearch-sdk = "0.26.1"
serde_with = "3.8.2"
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = { version = "0.3.18", features = [
    "parking_lot",
    "registry",
] }
linkify = "0.10.0"
anyhow = "1.0.86"
thiserror = "1.0.61"
pastemyst = "1.0.0"
# oxipng = "5.0.1"
# mozjpeg = "0.9.3"
# lz4_flex = "0.9.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"

[profile.release-full]
inherits = "release"
lto = true
